test/src/e2e_vm_tests/test_programs/should_pass/language/generate_b256/src/main.sw
script;

use std::assert::assert;

fn main() {
    let key1 = __generate_b256();
}
