test/src/e2e_vm_tests/test_programs/should_fail/shadowing/shadowed_consts_and_vars_alias/src/main.sw
script;

dep lib;

// const shadowing an imported const with alias
use lib::X as Y;
const Y = 7;

fn main() {
    // var shadowing an imported const with alias
    let Y = 4;
}
